SourceMetaData/src/objects/ICT_Article__c.object
<CustomObject>
    <description>Articlein a Knowledge base to support the ICT Service Desk</description>
    <fields>
        <fullName>Article_Content__c</fullName>
        <description>The Content of the ICT Article</description>
        <inlineHelpText>The Content of the ICT Article</inlineHelpText>
        <label>Article Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Name__c</fullName>
        <label>Article Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <description>The Type of article that this record corresponds to.</description>
        <inlineHelpText>The Type of article that this record corresponds to.</inlineHelpText>
        <label>Article Type</label>
        <picklist>
            <picklistValues>
                <fullName>FAQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intranet_Link__c</fullName>
        <description>A link to the article on the intranet</description>
        <inlineHelpText>A link to the article on the intranet</inlineHelpText>
        <label>Intranet Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Article</label>
        <referenceTo>ICT_Article__c</referenceTo>
        <relationshipLabel>ICT Articles</relationshipLabel>
        <relationshipName>ICT_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ICT Article</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Type__c</columns>
        <columns>Article_Name__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Articles</fullName>
        <columns>NAME</columns>
        <columns>Article_Type__c</columns>
        <columns>Article_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Articles</label>
    </listViews>
    <nameField>
        <displayFormat>Ar{0000000}</displayFormat>
        <label>ICT Article No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICT Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>